daemon_check.txt
    Checking daemon v0.1.0 (C:\Users\hayate\projects\phybkc\crates\daemon)
error[E0433]: failed to resolve: use of undeclared type `RwLock`
  --> crates\daemon\src\main.rs:27:34
   |
27 |     CURRENT_PROFILE.set(Arc::new(RwLock::new(None))).unwrap();
   |                                  ^^^^^^ use of undeclared type `RwLock`
   |
help: consider importing one of these structs
   |
 8 + use std::sync::RwLock;
   |
 8 + use std::sync::nonpoison::RwLock;
   |
 8 + use tokio::sync::RwLock;
   |

error[E0433]: failed to resolve: use of undeclared type `RwLock`
  --> crates\daemon\src\main.rs:28:27
   |
28 |     EXECUTOR.set(Arc::new(RwLock::new(None))).unwrap();
   |                           ^^^^^^ use of undeclared type `RwLock`
   |
help: consider importing one of these structs
   |
 8 + use std::sync::RwLock;
   |
 8 + use std::sync::nonpoison::RwLock;
   |
 8 + use tokio::sync::RwLock;
   |

error[E0433]: failed to resolve: use of undeclared type `RwLock`
  --> crates\daemon\src\main.rs:30:23
   |
30 |         .set(Arc::new(RwLock::new(HashMap::new())))
   |                       ^^^^^^ use of undeclared type `RwLock`
   |
help: consider importing one of these structs
   |
 8 + use std::sync::RwLock;
   |
 8 + use std::sync::nonpoison::RwLock;
   |
 8 + use tokio::sync::RwLock;
   |

For more information about this error, try `rustc --explain E0433`.
error: could not compile `daemon` (bin "daemon") due to 3 previous errors
